--- a/servoo_shipping/views/shipping_file_view.xml
+++ b/servoo_shipping/views/shipping_file_view.xml
@@ -31,13 +31,21 @@
                     <header>
                         <button name="action_open" states="draft" type="object" string="Validate" groups="servoo_shipping.shipping_group_user"/>
                         <button name="action_done" states="open" type="object" string="Done" groups="servoo_shipping.shipping_group_user"/>
-                        <button name="create_invoices" string="Create Invoice"
-                                type="object" class="btn-primary" data-hotkey="q" groups="account.group_account_invoice"
+                        <button name="%(action_wizard_shipping_invoice_file)d" type="action" string="Create Invoice"
+                                data-hotkey="q" groups="account.group_account_invoice" class="btn-primary"
                                 attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','&gt;=',1)]}"/>
 
-                        <button name="create_invoices" string="Create Invoice"
-                                type="object" data-hotkey="q" groups="account.group_account_invoice"
+                        <button name="%(action_wizard_shipping_invoice_file)d" type="action" string="Create Invoice"
+                                data-hotkey="q"  groups="account.group_account_invoice"
                                 attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','=',0)]}"/>
+
+                        <button name="create_invoices" string="Create Invoice"
+                                type="object" class="btn-primary" data-hotkey="q" groups="account.group_account_invoice"
+                                invisible="1"/>
+
+<!--                        <button name="create_invoices" string="Create Invoice"-->
+<!--                                type="object" data-hotkey="q" groups="account.group_account_invoice"-->
+<!--                                attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','=',0)]}"/>-->
 
                         <button name="action_draft" states="cancel" type="object" string="Open"
                                 groups="servoo_shipping.shipping_group_manager"/>
@@ -171,7 +179,7 @@
                                         <field name="state"/>
                                         <button name="%(action_wizard_shipping_delivery_order)d"
                                                 string="Create Delivery Order" type="action" states="saved"
-                                                class="btn-primary"/>
+                                                class="btn-primary" groups="servoo_shipping.shipping_group_delivery_order"/>
                                         <button name="%(action_report_delivery_order)d" type="action" states="delivered"
                                                 class="oe_stat_button" icon="fa-print"/>
                                     </tree>
@@ -265,8 +273,8 @@
                                 <field name="formality_line" widget="one2many" mode="tree,kanban">
                                     <tree string="Formalities Lines" editable="bottom"
                                           decoration-success="state=='done'" decoration-muted="state=='cancel'">
-                                        <field name="service_id"/>
-                                        <field name="name"/>
+                                        <field name="service_id" options="{'no_create': True}"/>
+                                        <field name="name" required="1"/>
                                         <field name="other_reference"/>
                                         <field name="administration_id" required="0"/>
                                         <field name="start_date"/>
@@ -300,6 +308,15 @@
             </field>
         </record>
 
+        <record id="action_shipping_file_no_create" model="ir.actions.act_window">
+            <field name="name">Shipping Files</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">servoo.shipping.file</field>
+            <field name="view_mode">tree,form</field>
+            <field name="context">{'create': False}</field>
+            <field name="domain">[]</field>
+        </record>
+
         <record id="action_shipping_file" model="ir.actions.act_window">
             <field name="name">Shipping Files</field>
             <field name="type">ir.actions.act_window</field>
@@ -320,7 +337,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">servoo.shipping.file</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{}</field>
+            <field name="context">{'create': False}</field>
             <field name="domain">[('state', 'in', ('open','done')), ('invoice_count','&lt;=',1)]</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
