--- a/servoo_stevedoring/views/stevedoring_file_view.xml
+++ b/servoo_stevedoring/views/stevedoring_file_view.xml
@@ -359,6 +359,15 @@
                 </form>
             </field>
         </record>
+
+        <record id="action_stevedoring_file_no_create" model="ir.actions.act_window">
+            <field name="name">Stevedoring Files</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">servoo.stevedoring.file</field>
+            <field name="view_mode">tree,form</field>
+             <field name="context">{'create': False}</field>
+            <field name="domain">[]</field>
+        </record>
         
         <record id="action_stevedoring_file" model="ir.actions.act_window">
             <field name="name">Stevedoring Files</field>
@@ -380,7 +389,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">servoo.stevedoring.file</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{}</field>
+            <field name="context">{'create': False}</field>
             <field name="domain">[('state', 'in', ('open','done')), ('invoice_count','&lt;=',1)]</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
