--- a/servoo_transit/views/transit_order_view.xml
+++ b/servoo_transit/views/transit_order_view.xml
@@ -32,7 +32,7 @@
                 <form string="Transit Order">
                     <header>
                         <button name="action_open" states="draft" type="object" string="Validate" groups="servoo_transit.transit_group_user"/>
-                        <button name="action_done" states="open" type="object" string="Done" groups="servoo_transit.transit_group_user"/>
+                        <button name="action_done" states="open" type="object" string="Done" groups="servoo_transit.transit_group_manager"/>
                         <button name="create_invoices" string="Create Invoice"
                         type="object" class="btn-primary" data-hotkey="q" groups="account.group_account_invoice"
                         attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','&gt;=',1)]}"/>
@@ -48,13 +48,13 @@
                     <sheet>
                         <div class="oe_button_box" name="button_box">
                             <button name="return_action_to_open"
-                            type="object"
-                            class="oe_stat_button"
-                            icon="fa-pencil-square-o"
-                            context="{'xml_id':'account.action_move_out_invoice_type'}"
-                            help="show the invoices for this transit order" >
-                            <field name="invoice_count" widget="statinfo" string="Invoices"/>
-                        </button>
+                                type="object"
+                                class="oe_stat_button"
+                                icon="fa-pencil-square-o"
+                                context="{'xml_id':'account.action_move_out_invoice_type'}"
+                                help="show the invoices for this transit order" >
+                                <field name="invoice_count" widget="statinfo" string="Invoices"/>
+                            </button>
                         </div>
                         <field name="invoice_state" invisible="1" />
                         <widget name="web_ribbon" title="Invoiced" attrs="{'invisible': [('invoice_state', '!=', 'invoiced')]}"/>
@@ -218,7 +218,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">servoo.transit.order</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{'create': False, 'edit': False}</field>
+            <field name="context">{'create': False}</field>
             <field name="domain">[('state', 'in', ('open','done')), ('invoice_count','&lt;=',1)]</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
