--- a/servoo_stevedoring/views/stevedoring_file_view.xml
+++ b/servoo_stevedoring/views/stevedoring_file_view.xml
@@ -55,15 +55,21 @@
                     <header>
                         <button name="action_open" states="draft" type="object" string="Validate" groups="servoo_stevedoring.stevedoring_group_user"/>
                         <button name="action_done" states="open" type="object" string="Done" groups="servoo_stevedoring.stevedoring_group_user"/>
-
-                        <button name="create_invoices" string="Create Invoice"
-                                groups="account.group_account_invoice"
-                                type="object" class="btn-primary" data-hotkey="q"
+                        <button name="%(action_wizard_stevedoring_invoice_file)d" type="action" string="Create Invoice"
+                                data-hotkey="q" groups="account.group_account_invoice" class="btn-primary"
                                 attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','&gt;=',1)]}"/>
 
-                        <button name="create_invoices" string="Create Invoice"
-                                type="object" data-hotkey="q" groups="account.group_account_invoice"
+                        <button name="%(action_wizard_stevedoring_invoice_file)d" type="action" string="Create Invoice"
+                                data-hotkey="q"  groups="account.group_account_invoice"
                                 attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','=',0)]}"/>
+
+                        <button name="create_invoices" string="Create Invoice"
+                                type="object" class="btn-primary" data-hotkey="q" groups="account.group_account_invoice"
+                                invisible="1"/>
+
+<!--                        <button name="create_invoices" string="Create Invoice"-->
+<!--                                type="object" data-hotkey="q" groups="account.group_account_invoice"-->
+<!--                                attrs="{'invisible': ['|',('state', 'not in', ('open', 'done')), ('invoice_count','=',0)]}"/>-->
 
                         <button name="%(action_wizard_stevedoring_outturn_report)d"
                                 groups="servoo_stevedoring.stevedoring_group_user"
