Ajout du choix de la facturation PAD à l'import ou à l'export, et de la facture complémentaire sur le wizard de facturation des dossiers shipping

--- a/servoo_shipping/wizard/wizard_shipping_invoice_file_view.xml
+++ b/servoo_shipping/wizard/wizard_shipping_invoice_file_view.xml
@@ -10,6 +10,9 @@
                         <field name="shipping_file_id" readonly="1" colspan="4"/>
                         <field name="currency_id" />
                         <field name="invoice_mode" />
+                        <field name="import_pad_invoice" attrs="{'invisible': [('invoice_mode', '!=', 'bl')]}"/>
+                        <field name="export_pad_invoice" attrs="{'invisible': [('invoice_mode', '!=', 'bl')]}"/>
+                        <field name="additional_invoice" attrs="{'invisible': [('invoice_mode', '=', 'bl')]}"/>
                     </group>
                 </sheet>
                 <footer>
