Prise en compte du nombre de jour dans le calcul du montant total (qte * nb_jours * prix_unitaire) et des taxes au niveau de la facturation et du devis

--- a/servoo_sales/views/account_move_views.xml
+++ b/servoo_sales/views/account_move_views.xml
@@ -117,8 +117,11 @@
                             attrs="{'invisible': ['|',('move_type', '!=', 'in_invoice'), ('state', '!=', 'management_control_approval')]}" />
                 </button>
                 <field name="price_unit" position="after">
-                    <field name="no_days" optional="hide"/>
+                    <field name="no_days" optional="hide" force_save="1"/>
                 </field>
+                <xpath expr="//field[@name='line_ids']/tree/field[@name='account_id']" position="before">
+                    <field name="no_days" invisible="1"/>
+                </xpath>
             </field>
         </record>
 
