Ajout du champ numero de bl sur l tree view de la facture Prise en compte du champ P/C sur les devis et les factures

--- a/servoo_sales/report/report_invoice.xml
+++ b/servoo_sales/report/report_invoice.xml
@@ -158,6 +158,9 @@
                                                 <b>
                                                     <span t-field="o.partner_id.name"/>
                                                 </b>
+                                                <t t-if="o.pc_partner_id">
+                                                    <br><b>P/C <span t-field="o.pc_partner_id.name"/></b></br>
+                                                </t>
                                             </font>
                                             <br>
                                                 <font>
