--- a/servoo_sales/report/sale_report_templates.xml
+++ b/servoo_sales/report/sale_report_templates.xml
@@ -154,9 +154,6 @@
                                     <b>
                                         <span t-field="doc.partner_id.name"/>
                                     </b>
-                                    <t t-if="doc.pc_partner_id">
-                                        <br><b>P/C <span t-field="doc.pc_partner_id.name"/></b></br>
-                                    </t>
                                 </font>
                                 <br>
                                     <font>
@@ -202,6 +199,9 @@
                                         TEL: <span t-field="doc.partner_id.phone"/>
                                     </t>
                                 </br>
+                                <t t-if="doc.pc_partner_id">
+                                    <div align="center"> <br><b>P/C <span t-field="doc.pc_partner_id.name"/></b></br></div>
+                                </t>
                             </td>
                         </tr>
                         <tr valign="top">
